# ML_module_1

./: README.md  model.ipynb  requirements.txt  submission.csv  submission2.csv
ml_model/: pyproject.toml
ml_model/src/ml_model/: model.py
ml_model/src/ml_model/data/: results.csv
ml_model/src/ml_model/model/: model.pkl  preprocessor.pkl
notebooks/: model.ipynb  model_LightGBM.ipynb  model_LightGBM_ClearML.ipynb  model_RF.ipynb  requirements.txt  submission.csv
