[project]
name = "ml-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Klassen",email = "ivanklassen1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ml_model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
